--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@
 ::-webkit-scrollbar-thumb {
   background-image: linear-gradient(#36d1dc, #5b86e5);
 }
+.delete {
+  margin-right: 1rem;
+}
+.title {
+  font-size: 1.5rem;
+}
